--- a/Menu.form
+++ b/Menu.form
@@ -197,7 +197,7 @@
     <Component class="javax.swing.JLabel" name="jLabel3">
       <Properties>
         <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-          <Image iconType="3" name="/bridge/bridge.png"/>
+          <Image iconType="2" name="C:\Users\Val\Documents\NetBeansProjects\BridgeGit\src\res\bridge.png"/>
         </Property>
       </Properties>
       <Constraints>
@@ -209,7 +209,7 @@
     <Component class="javax.swing.JLabel" name="jLabel1">
       <Properties>
         <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-          <Image iconType="3" name="/bridge/menu.jpg"/>
+          <Image iconType="2" name="C:\Users\Val\Documents\NetBeansProjects\BridgeGit\src\res\menu.jpg"/>
         </Property>
       </Properties>
       <Constraints>
