correction slide (grisé Signed-off-by: amine38 <oueldbled@hotmail.fr>

--- a/VSIA.form
+++ b/VSIA.form
@@ -143,6 +143,7 @@
           </Properties>
           <Events>
             <EventHandler event="itemStateChanged" listener="java.awt.event.ItemListener" parameters="java.awt.event.ItemEvent" handler="modeItemStateChanged"/>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="modeActionPerformed"/>
           </Events>
         </Component>
       </SubComponents>
