--- a/VSIA.form
+++ b/VSIA.form
@@ -157,7 +157,7 @@
         <Property name="toolTipText" type="java.lang.String" value=""/>
         <Property name="value" type="int" value="2"/>
         <Property name="cursor" type="java.awt.Cursor" editor="org.netbeans.modules.form.editors2.CursorEditor">
-          <Color id="Pointeur par d&#xe9;faut"/>
+          <Color id="Curseur par d&#xe9;faut"/>
         </Property>
       </Properties>
       <Constraints>
