ajout de cartes a renommer, bouton charger dans graphique
Signed-off-by: samy <Samy@Ordinatueur.(none)>

--- a/Options.form
+++ b/Options.form
@@ -254,20 +254,20 @@
       <Layout>
         <DimensionLayout dim="0">
           <Group type="103" groupAlignment="0" attributes="0">
-              <Group type="102" attributes="0">
+              <Group type="102" alignment="0" attributes="0">
+                  <EmptySpace max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="0" attributes="0">
                       <Group type="102" alignment="0" attributes="0">
-                          <EmptySpace max="-2" attributes="0"/>
-                          <Component id="jLabelCartes" min="-2" max="-2" attributes="0"/>
-                      </Group>
-                      <Group type="102" alignment="0" attributes="0">
-                          <EmptySpace min="-2" pref="44" max="-2" attributes="0"/>
+                          <EmptySpace min="-2" pref="10" max="-2" attributes="0"/>
                           <Component id="jRadioButtonCartes1" min="-2" max="-2" attributes="0"/>
-                          <EmptySpace type="separate" max="-2" attributes="0"/>
+                          <EmptySpace type="unrelated" max="-2" attributes="0"/>
                           <Component id="jRadioButtonCartes2" min="-2" max="-2" attributes="0"/>
+                          <EmptySpace type="unrelated" max="-2" attributes="0"/>
+                          <Component id="jRadioButtonCartes3" min="-2" max="-2" attributes="0"/>
                       </Group>
+                      <Component id="jLabelCartes" alignment="0" min="-2" max="-2" attributes="0"/>
                   </Group>
-                  <EmptySpace pref="66" max="32767" attributes="0"/>
+                  <EmptySpace pref="33" max="32767" attributes="0"/>
               </Group>
           </Group>
         </DimensionLayout>
@@ -278,8 +278,9 @@
                   <Component id="jLabelCartes" min="-2" max="-2" attributes="0"/>
                   <EmptySpace type="unrelated" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="3" attributes="0">
-                      <Component id="jRadioButtonCartes1" alignment="3" min="-2" max="-2" attributes="0"/>
+                      <Component id="jRadioButtonCartes3" alignment="3" min="-2" max="-2" attributes="0"/>
                       <Component id="jRadioButtonCartes2" alignment="3" min="-2" max="-2" attributes="0"/>
+                      <Component id="jRadioButtonCartes1" alignment="3" min="-2" max="-2" attributes="0"/>
                   </Group>
                   <EmptySpace pref="35" max="32767" attributes="0"/>
               </Group>
@@ -312,6 +313,17 @@
           </Properties>
           <AuxValues>
             <AuxValue name="JavaCodeGenerator_InitCodePost" type="java.lang.String" value="if (conf.getDeck() == 1)&#xa;    jRadioButtonCartes2.setSelected(true);"/>
+          </AuxValues>
+        </Component>
+        <Component class="javax.swing.JRadioButton" name="jRadioButtonCartes3">
+          <Properties>
+            <Property name="buttonGroup" type="javax.swing.ButtonGroup" editor="org.netbeans.modules.form.RADComponent$ButtonGroupPropertyEditor">
+              <ComponentRef name="buttonGroupCartes"/>
+            </Property>
+            <Property name="text" type="java.lang.String" value="Chats!"/>
+          </Properties>
+          <AuxValues>
+            <AuxValue name="JavaCodeGenerator_InitCodePost" type="java.lang.String" value="if (conf.getDeck() == 3)&#xa;    jRadioButtonCartes3.setSelected(true);"/>
           </AuxValues>
         </Component>
       </SubComponents>
